# chatapp

./: .gitignore  README.md  package.json  pyproject.toml  tailwind.config.js  utils.py
ai/clients/: __init__.py
ai/modules/: sql.py
ai/servers/: __init__.py
chatapp/: config.py  settings.py  urls.py  views.py
chatapp/mcp/: client.py
chatapp/mcp/experimental/: remotetool.py
chatapp/static/css/: input.css  styles.css
chatapp/templates/: base.html  index.html  input_cell.html  mcp_tree.html  output_cell.html  sidebar.html
mcpclient/experimental/: client.py  test.py
mcpclient/tools/: sql.py
model/: urls.py  views.py
model/templates/chat/: index.html  message_response.html  sql_response.html
model/templates/interface/: index.html  results.html
model/templates/model/: chat.html  editor.html  index.html  modal.html  results.html  table.html
model/templates/pivot/: index.html  refreshed_table.html
model/templates/report/: default.md  index.html
model/templates/utils/: modal.html  table.html
model/views/: chat.py  interface.py  modal.py  pivot.py
notebook/: urls.py  views.py
notebook/templates/notebook/: index.html  markdown_cell.html  mcp_tree.html  output_cell.html  sidebar.html
