[project]
name = "4eyes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.7",
    "fastmcp>=0.4.1",
    "jinja2>=3.1.6",
    "markdown>=3.7",
    "mcp>=1.5.0",
    "openai>=1.68.2",
    "pyecharts>=2.0.8",
]
